--- a/BACKEND/.env.sample
+++ b/BACKEND/.env.sample
@@ -1,2 +1,11 @@
 PORT=8000
-MONGODB_URI=mongodb+srv://piyush:piyush9876@cluster0.teonwoq.mongodb.net
+MONGODB_URI=
+JWT_SECRET=sup3rStrongSecr3tKey!#%Random123456
+
+
+EMAIL_USER=youremail@example.com
+EMAIL_PASS=your_app_password
+TWILIO_SID=your_twilio_sid
+TWILIO_AUTH_TOKEN=your_twilio_auth
+TWILIO_PHONE=+1234567890
+
